--- a/templates/collabora.conf.j2
+++ b/templates/collabora.conf.j2
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName collabora.example.com
+  ServerName {{ col_servername }}
   Options -Indexes
 
   ErrorLog "/var/log/apache2/collabora_error"
