--- a/templates/collabora-ssl.conf.j2
+++ b/templates/collabora-ssl.conf.j2
@@ -19,29 +19,29 @@ SSLProxyVerify None
 SSLProxyCheckPeerCN Off
 SSLProxyCheckPeerName Off
 
-# keep the host
-ProxyPreserveHost On
+  # keep the host
+  ProxyPreserveHost On
 
-# static html, js, images, etc. served from loolwsd
-# loleaflet is the client part of LibreOffice Online
-ProxyPass           /loleaflet https://127.0.0.1:9980/loleaflet retry=0
-ProxyPassReverse    /loleaflet https://127.0.0.1:9980/loleaflet
+  # static html, js, images, etc. served from loolwsd
+  # loleaflet is the client part of Collabora Online
+  ProxyPass           /loleaflet http://127.0.0.1:9980/loleaflet retry=0
+  ProxyPassReverse    /loleaflet http://127.0.0.1:9980/loleaflet
 
-# WOPI discovery URL
-ProxyPass           /hosting/discovery https://127.0.0.1:9980/hosting/discovery retry=0
-ProxyPassReverse    /hosting/discovery https://127.0.0.1:9980/hosting/discovery
+  # WOPI discovery URL
+  ProxyPass           /hosting/discovery http://127.0.0.1:9980/hosting/discovery retry=0
+  ProxyPassReverse    /hosting/discovery http://127.0.0.1:9980/hosting/discovery
 
-# Main websocket
-ProxyPassMatch "/lool/(.*)/ws$" wss://127.0.0.1:9980/lool/$1/ws nocanon
+  # Capabilities
+  ProxyPass           /hosting/capabilities http://127.0.0.1:9980/hosting/capabilities retry=0
+  ProxyPassReverse    /hosting/capabilities http://127.0.0.1:9980/hosting/capabilities
 
-# Admin Console websocket
-ProxyPass   /lool/adminws wss://127.0.0.1:9980/lool/adminws
+  # Main websocket
+  ProxyPassMatch "/lool/(.*)/ws$" ws://127.0.0.1:9980/lool/$1/ws nocanon
 
-# Download as, Fullscreen presentation and Image upload operations
-ProxyPass           /lool https://127.0.0.1:9980/lool
-ProxyPassReverse    /lool https://127.0.0.1:9980/lool
+  # Admin Console websocket
+  ProxyPass   /lool/adminws ws://127.0.0.1:9980/lool/adminws
 
-# Endpoint with information about availability of various features
-ProxyPass           /hosting/capabilities https://127.0.0.1:9980/hosting/capabilities retry=0
-ProxyPassReverse    /hosting/capabilities https://127.0.0.1:9980/hosting/capabilities
+  # Download as, Fullscreen presentation and Image upload operations
+  ProxyPass           /lool http://127.0.0.1:9980/lool
+  ProxyPassReverse    /lool http://127.0.0.1:9980/lool
 </VirtualHost>
